--- a/toggl/package.json
+++ b/toggl/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
