--- a/toggl/package.json
+++ b/toggl/package.json
@@ -7,9 +7,11 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.2",
     "react-live-clock": "^3.1.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-spinners": "^0.5.3",
     "redux": "^4.0.1",
     "store": "^2.0.12"
   },
